--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,19 @@ body.dark-theme .toolbar button:hover {
 }
 #splash {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: url('splash-background.png') no-repeat center center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px #000;
   z-index: 9999;
+  transition: opacity 1s ease-out;
 }
 
 /* === Toolbar (Sidebar) === */
