--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body.dark-theme .toolbar button:hover {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: url('splash-background.png') no-repeat center center;
+  background: url('splash-background.png?v=2') no-repeat center center;
   background-size: cover;
   z-index: 9999;
   display: flex;
