--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,10 @@ body.dark-theme .profile-pic {
 }
 
 .music-player audio {
-  width: 90%;
+  audio {
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 8px;
   max-width: 800px;
 }
 
